<resources>
    <string name="app_name">InoApp</string>
    <string name="navigation_drawer_open">Otwórz okno nawigacji</string>
    <string name="navigation_drawer_close">Zamknij okno nawigacji</string>
    <string name="nav_header_title">InoApp</string>
    <string name="nav_header_subtitle">ino.app@gmail.com</string>
    <string name="nav_header_desc">Nagłówek okna nawigacji</string>
    <string name="action_settings">Ustawienia</string>
    <string name="menu_home">Ekran główny</string>
    <string name="menu_trip_list">Wszystkie wycieczki</string>
    <string name="menu_your_trips">Twoje wycieczki</string>
    <string name="menu_add">Dodaj nową wycieczke</string>
    <string name="menu_about">O aplikacji</string>
    <string name="menu_contact">Napisz do nas</string>
    <string name="about_text">Ino App zostało stworzone w celu zapewnienia interesującego sposobu
        na aktywne spędzanie czasu. Z InoApp możesz odkrywać nieznane, ciekawe miejsca oraz dowiadywać
        się ciekawostek na ich temat poprzez rozwiązywanie quizów. Wybierz wycieczkę i spróbuj dotrzeć do właściwej
        lokalizacji.
    </string>
    <string name="about_app_logo_image_content_description">Logo aplikacji</string>
    <string name="title_about_fragment">O aplikacji</string>
    <string name="title_trip_list_fragment">Wszystkie wycieczki</string>
    <string name="title_home_fragment">Ino App</string>
    <string name="title_add_new_trip">Dodaj nową wycieczkę</string>
    <string name="title_your_trips_fragment">Twoje wycieczki</string>
    <string name="title_add_new_point">Dodaj nowy punkt</string>
    <string name="title_add_new_point_location">Dodaj lokalizację punktu</string>
    <string name="title_trip_details_fragment">Szczegóły wycieczki</string>
    <string name="title_game_fragment">Gra</string>
    <string name="title_quiz">Quiz</string>
    <string name="card_view_title_default">Tytuł</string>
    <string name="card_view_description_default">Opis</string>
    <string name="card_view_localization_default">Lokalizacja</string>
    <string name="card_view_number_of_points_default">Liczba punktów</string>
    <string name="add_new_trip_trip_title">Tytuł wycieczki:</string>
    <string name="add_new_trip_trip_title_hint">Wprowadź tytuł</string>
    <string name="add_new_trip_trip_description">Opis wycieczki:</string>
    <string name="add_new_trip_trip_description_hint">Wprowadź opis</string>
    <string name="add_new_trip_trip_localization">Lokalizacja wycieczki(np. Warszawa)</string>
    <string name="add_new_trip_trip_localization_hint">Wprowadź lokalizację</string>
    <string name="add_new_trip_number_of_points">Liczba punktów: 0</string>
    <string name="add_new_trip_points_added">Dodane punkty:</string>
    <string name="add_new_trip_button_add_new_point">Dodaj punkt</string>
    <string name="add_new_trip_button_clear_last_point">Usuń ostatni punkt</string>
    <string name="add_new_trip_button_add_new_trip">Dodaj wycieczkę</string>
    <string name="add_new_trip_number_of_points_format">Liczba punktów: %d</string>
    <string name="add_new_trip_complete_info_statement">Uzupełnij informację o wycieczce!</string>
    <string name="add_new_trip_no_points_statement">Nie dodano żadnych punktów.</string>
    <string name="add_new_point_location_label">Lokalizacja punktu:</string>
    <string name="add_new_point_add_location_button_text">Dodaj lokalizację</string>
    <string name="add_new_point_add_description_label_text">Opis punktu:</string>
    <string name="add_new_point_description_content_hint">Wprowadź opis</string>
    <string name="add_new_point_add_question_label_text">Dodaj pytanie i odpowiedzi:</string>
    <string name="add_new_point_question_hint">Pytanie</string>
    <string name="add_new_point_right_answer_hint">Prawidłowa odpowiedź</string>
    <string name="add_new_point_wrong_answer1_hint">Nieprawidłowa odpowiedź 1</string>
    <string name="add_new_point_wrong_answer2_hint">Nieprawidlowa odpowiedż 2</string>
    <string name="add_new_point_add_new_point_button_text">Dodaj punkt</string>
    <string name="add_new_point_back_button_text">Wróć do okna wycieczki</string>
    <string name="add_new_point_complete_info_statement">Uzupełnij informacje o punkcie!</string>
    <string name="your_trips_clear_last_trip_button">Usuń ostatnią wycieczkę</string>
    <string name="map_fragment_add_location">Dodaj lokalizację</string>
    <string name="coordinates_format">Współczędne:\nLat: %f, Long: %f</string>
    <string name="dropped_pin">Lokalizacja punktu</string>
    <string name="home_welcome_banner">Witaj w InoApp!</string>
    <string name="home_any_trip_text">Wygląda na to, że nie wybrałeś jeszcze żadnej wycieczki…</string>
    <string name="home_select_trip_text">Wybierz jedną ze swojej listy lub zobacz je wszystkie w zakładce \"Wszystkie wycieczki\" ;)</string>
    <string name="home_logo_image_content_description">Logo aplikacji</string>
    <string name="home_your_trips_button_text">Twoja lista</string>
    <string name="home_trip_list_button_text">Wszystkie wycieczki</string>
    <string name="home_add_new_trip_button_text">Dodaj nową wycieczkę</string>
    <string name="home_about_button_text">O aplikacji</string>
    <string name="home_game_button_text">Rozpocznij grę</string>
    <string name="trip_details_trip_deleted_statement">Usunięto wycieczkę.</string>
    <string name="trip_details_go_to_your_game_statement">Kliknij \"ROZPOCZNIJ GRĘ\" aby rozpocząć wycieczkę.</string>
    <string name="game_toggle_view_button_text">Zmień widok</string>
    <string name="game_end_trip_button_text">Zakończ wycieczkę</string>
    <string name="game_left_the_game_statement">Wyszedłeś z gry.</string>
    <string name="trip_list_trip_added_statement">Dodano wycieczkę: </string>
    <string name="quiz_right_answer_statement">Prawidłowa odpowiedź!\nKliknij przycisk \'Przejdź dalej\' aby kontynuować.</string>
    <string name="quiz_wrong_answer_statement">Zła odpowiedź :( Spróbuj ponownie.</string>
    <string name="quiz_win_statement">Gratulacje!\nUkończyłeś wycieczkę.</string>
    <string name="saved_trip_id">tripId</string>
    <string name="saved_trip_number_of_points">tripNumberOfPoints</string>
    <string name="saved_current_point_index">currentPointIndex</string>
    <string name="game_point_format">Punkt %d z %d</string>
    <string name="binding_utils_tripLocalizationForTripList">Lokalizacja: </string>
    <string name="binding_utils_tripNumberOfPointsForTripList">Liczba punktów: </string>
    <string name="binding_utils_tripTitleForGame">Tytuł wycieczki:</string>
    <string name="binding_utils_tripDescriptionForGame">Opis wycieczki:</string>
    <string name="binding_utils_pointDescriptionForGame">Tytuł punktu:</string>
    <string name="binding_utils_tripLocalizationForDetails">Lokalizacja wycieczki:</string>
    <string name="binding_utils_tripNumberOfPointsForDetails">Liczba punktów:</string>
    <string name="binding_utils_distanceLeftForGame">Dystans do następnego punktu:</string>
    <string name="binding_utils_distanceLeftForGame_counting_distance">Dystans do następnego punktu:\nObliczanie dystansu…</string>
    <string name="binding_utils_pointDescriptionForQuiz">Opis punktu:</string>
    <string name="binding_utils_questionForQuiz">Pytanie:</string>
    <string name="binding_utils_setAnswerForQuiz_error_text">Błąd</string>
    <string name="binding_utils_setTripWhichPointForGame_1">Punkt </string>
    <string name="binding_utils_setTripWhichPointForGame_2"> z </string>
    <string name="title_activity_maps">Mapa</string>
</resources>