<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools">

    <group
        android:id="@+id/nav_menu_top"
        android:checkableBehavior="none">
        <item
                android:id="@+id/homeFragment"
                android:icon="@drawable/ic_menu_home"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/tripListFragment"
                android:icon="@drawable/ic_menu_list"
                android:title="@string/menu_trip_list"/>
        <item
                android:id="@+id/yourTripsFragment"
                android:icon="@drawable/ic_menu_trips"
                android:title="@string/menu_your_trips"/>
        <item
                android:id="@+id/addNewTripNavigation"
                android:icon="@drawable/ic_menu_add"
                android:title="@string/menu_add"/>
    </group>

    <group
            android:id="@+id/nav_menu_bottom"
            android:checkableBehavior="none">
        <item
                android:id="@+id/aboutFragment"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/menu_about"/>
        <!--<item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_menu_contact"
                android:title="@string/menu_contact"/>-->
    </group>

</menu>
