<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools" android:id="@+id/navigation"
            app:startDestination="@id/homeFragment">

    <fragment android:id="@+id/homeFragment" android:name="com.example.inoapp.HomeFragment"
              android:label="@string/title_home_fragment" tools:layout="@layout/fragment_home">
        <action android:id="@+id/action_homeFragment_to_tripListFragment" app:destination="@id/tripListFragment"/>
    </fragment>

    <fragment android:id="@+id/tripListFragment" android:name="com.example.inoapp.TripListFragment"
              android:label="@string/title_trip_list_fragment" tools:layout="@layout/fragment_trip_list">
        <action android:id="@+id/action_tripListFragment_to_homeFragment" app:destination="@id/homeFragment"/>
    </fragment>

    <fragment android:id="@+id/aboutFragment" android:name="com.example.inoapp.AboutFragment"
              android:label="@string/title_about_fragment" tools:layout="@layout/fragment_about"/>

    <fragment android:id="@+id/yourTripsFragment" android:name="com.example.inoapp.yourtrips.YourTripsFragment"
              android:label="@string/title_your_trips_fragment">
        <action android:id="@+id/action_yourTripsFragment_to_homeFragment" app:destination="@id/homeFragment"/>
    </fragment>

    <fragment android:id="@+id/tripDetailsFragment" android:name="com.example.inoapp.yourtrips.TripDetailsFragment"
              android:label="fragment_trip_details" tools:layout="@layout/fragment_trip_details"/>

    <navigation android:id="@+id/addNewTripNavigation" app:startDestination="@id/addNewTripFragment">
        <fragment android:id="@+id/addNewTripFragment" android:name="com.example.inoapp.addnewtrip.AddNewTripFragment"
                  android:label="@string/title_add_new_trip" tools:layout="@layout/fragment_add_new_trip">

            <action android:id="@+id/action_addNewTripFragment_to_addNewPointFragment"
                    app:destination="@id/addNewPointFragment"/>
        </fragment>

        <fragment android:id="@+id/addNewPointFragment" android:name="com.example.inoapp.addnewtrip.AddNewPointFragment"
                  android:label="@string/title_add_new_point" tools:layout="@layout/fragment_add_new_point">
            <action android:id="@+id/action_addNewPointFragment_to_mapFragment" app:destination="@id/mapFragment"/>
        </fragment>
        <fragment android:id="@+id/mapFragment" android:name="com.example.inoapp.addnewtrip.MapFragment"
                  android:label="@string/title_add_new_point_location" tools:layout="@layout/fragment_map"/>
    </navigation>

</navigation>