<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.example.inoapp.addnewtrip.AddNewTripFragment">

    <data>
        <variable
                name="addNewTripViewModel"
                type="com.example.inoapp.addnewtrip.AddNewTripViewModel" />
    </data>

    <ScrollView
            android:id="@+id/add_new_trip_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="24dp"
                android:paddingEnd="24dp">

            <!-- Trip title -->
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:gravity="top"
                    android:text="@string/add_new_trip_trip_title"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textCapSentences|textMultiLine"
                    android:hint="@string/add_new_trip_trip_title_hint"
                    android:text="@={addNewTripViewModel.tripTitle}"/>

            <!-- Trip description -->
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:gravity="top"
                    android:text="@string/add_new_trip_trip_description"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textCapSentences|textMultiLine"
                    android:hint="@string/add_new_trip_trip_description_hint"
                    android:text="@={addNewTripViewModel.tripDescription}"/>

            <!-- Trip localization -->
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:gravity="top"
                    android:text="@string/add_new_trip_trip_localization"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textCapSentences|textMultiLine"
                    android:hint="@string/add_new_trip_trip_localization_hint"
                    android:text="@={addNewTripViewModel.tripLocalization}"/>

            <!-- Number of points text view -->
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:gravity="top"
                    android:text="@{@string/add_new_trip_number_of_points_format(addNewTripViewModel.numberOfPoints)}"/>

            <!-- Trip description -->
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:gravity="top"
                    android:text="@string/add_new_trip_points_added"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/theme2ColorDark"/>

            <!-- Buttons -->
            <Button
                    android:id="@+id/add_new_trip_add_new_point"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:paddingStart="@dimen/fab_margin"
                    android:paddingEnd="@dimen/fab_margin"
                    android:text="@string/add_new_trip_button_add_new_point"
                    style="@style/Buttons"/>

            <Button
                    android:id="@+id/add_new_trip_clear_last_point"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:paddingStart="@dimen/fab_margin"
                    android:paddingEnd="@dimen/fab_margin"
                    android:text="@string/add_new_trip_button_clear_last_point"
                    style="@style/Buttons"/>

            <Button
                    android:id="@+id/add_new_trip_add_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:paddingStart="@dimen/fab_margin"
                    android:paddingEnd="@dimen/fab_margin"
                    android:onClick="@{() -> addNewTripViewModel.onAddNewTrip()}"
                    android:text="@string/add_new_trip_button_add_new_trip"
                    style="@style/Buttons"/>
        </LinearLayout>
    </ScrollView>
</layout>