<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.example.inoapp.home.HomeFragment">
    <data>
        <variable
                name="homeViewModel"
                type="com.example.inoapp.home.HomeViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/homeConstraint"
            android:background="@android:color/background_light"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <!-- Welcome Logo -->
        <ImageView
                android:id="@+id/home_logo_image"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:src="@drawable/logo"
                android:contentDescription="@string/home_logo_image_content_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <!-- Welcome TextViews -->
        <TextView
                android:id="@+id/home_welcome_banner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/home_welcome_banner"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/home_logo_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/home_logo_image" />

        <TextView
                android:id="@+id/home_any_trip_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/home_any_trip_text"
                android:textStyle="italic"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/home_welcome_banner"
                app:layout_constraintStart_toStartOf="@+id/home_welcome_banner"
                app:layout_constraintTop_toBottomOf="@+id/home_welcome_banner" />

        <TextView
                android:id="@+id/home_select_trip_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/home_select_trip_text"
                android:textSize="15sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="@+id/home_any_trip_text"
                app:layout_constraintStart_toStartOf="@+id/home_any_trip_text"
                app:layout_constraintTop_toBottomOf="@+id/home_any_trip_text" />


        <Button
                android:id="@+id/home_go_to_your_trips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="64dp"
                android:text="@string/home_your_trips_button_text"
                android:onClick="@{() -> homeViewModel.onGoToYourTrips()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_select_trip_text"
                style="@style/Buttons"/>

        <Button
                android:id="@+id/home_go_to_all_trips"
                style="@style/Buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:text="@string/home_trip_list_button_text"
                android:onClick="@{() -> homeViewModel.onGoToTripList()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_go_to_your_trips" />

        <Button
                android:id="@+id/home_go_to_adding_trip"
                style="@style/Buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:text="@string/home_add_new_trip_button_text"
                android:onClick="@{() -> homeViewModel.onGoToAddNewTrip()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_go_to_all_trips" />

        <Button
                android:id="@+id/home_go_to_about"
                style="@style/Buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:text="@string/home_about_button_text"
                android:onClick="@{() -> homeViewModel.onGoToAbout()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_go_to_adding_trip" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>